methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:5: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    if(isFacingTrail()==true){
                    ^SlugSnail:29: error: value c is not a member of object java.awt.Color
    if(getCouleurSol()==Color.c && estFaceMur()==true){
                              ^