methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while(estSurBiscuit==false){
    leveBrosse()
    if(isFacingTrail()==true){
      baisseBrosse()
      avance()
    }else{
      gauche()
    }
    
    
    
    
    
    
    
    
    
  }
  prendBiscuit() 
  
}

// Copy your isFacingTrail() here
def isFacingTrail(c:Color):Boolean = {

    avance()
  	if(getCouleurSol()==Color.c && estFaceMur()==true){
      return false
		}else if(getCouleurSol()==Color.green){
      recule()
      return true
    }else{
      recule()
      return false

    }
}
